--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(https://e1.pxfuel.com/desktop-wallpaper/613/161/desktop-wallpaper-physics-mathematics-equation-equations-formula-formula.jpg);
+    background-image: url(https://shorturl.at/bzNQZ);
     background-size: cover; 
 }
 
